📈  third  project done  📈

--- a/exercice-3-legende-image/index.html
+++ b/exercice-3-legende-image/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="photo-container">
+        <img src="https://picsum.photos/id/1015/600/400" alt="Paysage" class="photo">
+        <div class="caption">© Photo : Paysage naturel</div>
+    </div>
     
 </body>
 </html>
