--- a/exercice-4-banniere/index.html
+++ b/exercice-4-banniere/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="banner">🔔 Ne ratez pas nos nouveautés !</div>
+  <div class="main-content">
+    <p>Contenu de la page...</p>
+  </div>
 </body>
 </html>
